--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="resume">
     <h2>Education</h2>
     <ul>
-      <li>B.E in Computer Science - RNS Institute Of Technology (2020–2024)</li>
+      <li>B.E in Computer Science - RNS Institute Of Technology (2021-2025)</li>
     </ul>
 
     <h2>Skills</h2>
@@ -31,7 +31,7 @@
     </ul>
 
     <h2>Experience</h2>
-    <p>Intern - ABC Software Ltd. (2023)</p>
+    <p>Intern - ABC Software Ltd. (2025)</p>
   </section>
 
   <footer>
