Revise index.html to enhance resume content
Updated the resume page with additional sections and details.

--- a/index.html
+++ b/index.html
@@ -3,35 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Resume</title>
+  <title>Resume - Deepthi AS</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="script.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Deepthi AS</h1>
-    <p>Web Developer | Designer | Programmer</p>
+    <h1>Resume</h1>
     <nav>
       <a href="index.html">Resume</a> |
       <a href="bio.html">Bio-data</a>
     </nav>
   </header>
 
-  <section id="resume">
+  <section id="intro">
+    <h2>About Me</h2>
+    <p>
+      I am <strong>Deepthi A S</strong>, a passionate and motivated individual with an interest in 
+      <strong>software development</strong>, <strong>web design</strong>, and <strong>technology innovation</strong>. 
+      I enjoy solving logical problems, learning new programming languages, and working on creative projects 
+      that have real-world impact.
+    </p>
+  </section>
+
+  <section id="education">
     <h2>Education</h2>
     <ul>
-      <li>B.E in Computer Science - RNS Institute Of Technology (2021-2025)</li>
+      <li><strong>Bachelor of Engineering (B.E)</strong> in Computer Science - VTU University</li>
+      <li><strong>PUC (Pre-University Course)</strong> - Science Stream</li>
+      <li><strong>SSLC</strong> - State Board</li>
     </ul>
+  </section>
 
-    <h2>Skills</h2>
+  <section id="skills">
+    <h2>Technical Skills</h2>
     <ul>
-      <li>HTML, CSS, JavaScript, PHP</li>
-      <li>React, Node.js, MySQL</li>
+      <li>Programming Languages: C, C++, Python, Java</li>
+      <li>Web Technologies: HTML, CSS, JavaScript, PHP</li>
+      <li>Database: MySQL</li>
+      <li>Tools: VS Code, GitHub</li>
     </ul>
+  </section>
 
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Automated IV Drip Monitoring System:</strong> 
+        Designed a system to monitor patient glucose levels and alert nurses via SMS.
+      </li>
+      <li><strong>Online Registration Form:</strong> 
+        Created a web application using HTML, CSS, JavaScript, and PHP to manage student registrations.
+      </li>
+    </ul>
+  </section>
+
+  <section id="experience">
     <h2>Experience</h2>
-    <p>Intern - ABC Software Ltd. (2025)</p>
+    <p>Currently focusing on academic learning, personal projects, and technical skill development. 
+       Looking for internship opportunities to gain hands-on experience in the software industry.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p><strong>Email:</strong> deepthias@example.com</p>
+    <p><strong>Phone:</strong> +91-9876543210</p>
+    <p><strong>Location:</strong> Bengaluru, India</p>
   </section>
 
   <footer>
@@ -39,3 +74,4 @@
   </footer>
 </body>
 </html>
+
